--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "bash run.sh",
-    "test" : "mocha"
+    "start": "node app.js",
+    "heroku-postbuild": "cd fugitives && npm install && npm run build"
 
   },
   "dependencies": {
