--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "heroku-postbuild": "cd fugitives && npm install && npm run build"
   },
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mysql-session": "^2.1.4",
+    "express-session": "^1.17.1",
+    "habitat": "^3.1.2",
     "jsonfile": "^6.0.1",
     "mocha": "^7.2.0",
     "multer": "^1.4.2",
